--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
 	],
 	"require": {
 		"php": ">=8.1.0",
-		"typo3/cms-core": "^12.0",
-		"typo3/cms-frontend": "^12.0"
+		"typo3/cms-core": "^12.0 || ^13.4",
+		"typo3/cms-frontend": "^12.0 || ^13.4"
 	},
 	"autoload": {
 		"psr-4": {
